// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`default queue behavior 1`] = `
"{
  \\"resource\\": {
    \\"aws_sqs_queue\\": {
      \\"root_Queue_7193B145\\": {
        \\"name\\": \\"Queue-c822c726\\"
      }
    }
  }
}"
`;

exports[`default queue behavior 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Queue": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": true,
                },
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.sqsQueue.SqsQueue",
                      "version": "12.0.2",
                    },
                    "id": "Default",
                    "path": "root/Default/Queue/Default",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A distributed message queue",
                  "title": "Queue",
                },
                "id": "Queue",
                "path": "root/Default/Queue",
              },
              "WingLogger": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/Default/WingLogger",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.2",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`queue name valid 1`] = `
"{
  \\"resource\\": {
    \\"aws_sqs_queue\\": {
      \\"root_TheIncredibleQueue01_032AFBF2\\": {
        \\"name\\": \\"The-Incredible_Queue-01-c8d1a14d\\"
      }
    }
  }
}"
`;

exports[`queue name valid 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "The-Incredible_Queue-01": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": true,
                },
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.sqsQueue.SqsQueue",
                      "version": "12.0.2",
                    },
                    "id": "Default",
                    "path": "root/Default/The-Incredible_Queue-01/Default",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A distributed message queue",
                  "title": "Queue",
                },
                "id": "The-Incredible_Queue-01",
                "path": "root/Default/The-Incredible_Queue-01",
              },
              "WingLogger": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/Default/WingLogger",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.2",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`queue with a consumer function 1`] = `"new (require(\\"[REDACTED]/wingsdk/src/shared-aws/function.inflight\\")).FunctionClient(process.env[\\"FUNCTION_NAME_68e3f3ae\\"])"`;

exports[`queue with a consumer function 2`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"root_QueueOnMessagec5395e41_IamRole_800EDB96\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_QueueOnMessagec5395e41_IamRolePolicy_2E9AE0BB\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"sqs:ReceiveMessage\\\\\\",\\\\\\"sqs:ChangeMessageVisibility\\\\\\",\\\\\\"sqs:GetQueueUrl\\\\\\",\\\\\\"sqs:DeleteMessage\\\\\\",\\\\\\"sqs:GetQueueAttributes\\\\\\"],\\\\\\"Resource\\\\\\":\\\\\\"\${aws_sqs_queue.root_Queue_7193B145.arn}\\\\\\",\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_QueueOnMessagec5395e41_IamRole_800EDB96.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_QueueOnMessagec5395e41_IamRolePolicyAttachment_90B64365\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_QueueOnMessagec5395e41_IamRole_800EDB96.name}\\"
      }
    },
    \\"aws_lambda_event_source_mapping\\": {
      \\"root_Queue_EventSourceMapping_A20C741D\\": {
        \\"batch_size\\": 1,
        \\"event_source_arn\\": \\"\${aws_sqs_queue.root_Queue_7193B145.arn}\\",
        \\"function_name\\": \\"\${aws_lambda_function.root_QueueOnMessagec5395e41_BFDF10CF.function_name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_QueueOnMessagec5395e41_BFDF10CF\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Queue-OnMessage-c5395e41-c87b8107\\"
          }
        },
        \\"function_name\\": \\"Queue-OnMessage-c5395e41-c87b8107\\",
        \\"handler\\": \\"index.handler\\",
        \\"publish\\": true,
        \\"role\\": \\"\${aws_iam_role.root_QueueOnMessagec5395e41_IamRole_800EDB96.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_QueueOnMessagec5395e41_Code_F10D8CAB.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_QueueOnMessagec5395e41_S3Object_9BE0A142.key}\\",
        \\"timeout\\": 30
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_QueueOnMessagec5395e41_Code_F10D8CAB\\": {
        \\"bucket_prefix\\": \\"code-c82147c7-\\"
      }
    },
    \\"aws_s3_object\\": {
      \\"root_QueueOnMessagec5395e41_S3Object_9BE0A142\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_QueueOnMessagec5395e41_Code_F10D8CAB.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    },
    \\"aws_sqs_queue\\": {
      \\"root_Queue_7193B145\\": {
        \\"name\\": \\"Queue-c822c726\\",
        \\"visibility_timeout_seconds\\": 30
      }
    }
  }
}"
`;

exports[`queue with a consumer function 3`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Handler": {
                "attributes": {
                  "wing:resource:connections": [
                    {
                      "direction": "inbound",
                      "implicit": false,
                      "relationship": "handle",
                      "resource": "root/Default/Queue-OnMessage-c5395e41",
                    },
                  ],
                  "wing:resource:stateful": false,
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "An inflight resource",
                  "hidden": true,
                  "title": "Inflight",
                },
                "id": "Handler",
                "path": "root/Default/Handler",
              },
              "Queue": {
                "attributes": {
                  "wing:resource:connections": [
                    {
                      "direction": "outbound",
                      "implicit": false,
                      "relationship": "on_message",
                      "resource": "root/Default/Queue-OnMessage-c5395e41",
                    },
                  ],
                  "wing:resource:stateful": true,
                },
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.sqsQueue.SqsQueue",
                      "version": "12.0.2",
                    },
                    "id": "Default",
                    "path": "root/Default/Queue/Default",
                  },
                  "EventSourceMapping": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.lambdaEventSourceMapping.LambdaEventSourceMapping",
                      "version": "12.0.2",
                    },
                    "id": "EventSourceMapping",
                    "path": "root/Default/Queue/EventSourceMapping",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A distributed message queue",
                  "title": "Queue",
                },
                "id": "Queue",
                "path": "root/Default/Queue",
              },
              "Queue-OnMessage-c5395e41": {
                "attributes": {
                  "wing:resource:connections": [
                    {
                      "direction": "outbound",
                      "implicit": false,
                      "relationship": "handle",
                      "resource": "root/Default/Handler",
                    },
                    {
                      "direction": "outbound",
                      "implicit": true,
                      "relationship": "print",
                      "resource": "root/Default/WingLogger",
                    },
                    {
                      "direction": "inbound",
                      "implicit": false,
                      "relationship": "on_message",
                      "resource": "root/Default/Queue",
                    },
                  ],
                  "wing:resource:stateful": false,
                },
                "children": {
                  "Asset": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.15.2",
                    },
                    "id": "Asset",
                    "path": "root/Default/Queue-OnMessage-c5395e41/Asset",
                  },
                  "Code": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                      "version": "12.0.2",
                    },
                    "id": "Code",
                    "path": "root/Default/Queue-OnMessage-c5395e41/Code",
                  },
                  "Default": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.lambdaFunction.LambdaFunction",
                      "version": "12.0.2",
                    },
                    "id": "Default",
                    "path": "root/Default/Queue-OnMessage-c5395e41/Default",
                  },
                  "IamRole": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                      "version": "12.0.2",
                    },
                    "id": "IamRole",
                    "path": "root/Default/Queue-OnMessage-c5395e41/IamRole",
                  },
                  "IamRolePolicy": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                      "version": "12.0.2",
                    },
                    "id": "IamRolePolicy",
                    "path": "root/Default/Queue-OnMessage-c5395e41/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.iamRolePolicyAttachment.IamRolePolicyAttachment",
                      "version": "12.0.2",
                    },
                    "id": "IamRolePolicyAttachment",
                    "path": "root/Default/Queue-OnMessage-c5395e41/IamRolePolicyAttachment",
                  },
                  "S3Object": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.s3Object.S3Object",
                      "version": "12.0.2",
                    },
                    "id": "S3Object",
                    "path": "root/Default/Queue-OnMessage-c5395e41/S3Object",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Queue-OnMessage-c5395e41",
                "path": "root/Default/Queue-OnMessage-c5395e41",
              },
              "Queue-OnMessageHandler-c5395e41": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": false,
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "id": "Queue-OnMessageHandler-c5395e41",
                "path": "root/Default/Queue-OnMessageHandler-c5395e41",
              },
              "WingLogger": {
                "attributes": {
                  "wing:resource:connections": [
                    {
                      "direction": "inbound",
                      "implicit": true,
                      "relationship": "print",
                      "resource": "root/Default/Queue-OnMessage-c5395e41",
                    },
                  ],
                  "wing:resource:stateful": true,
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/Default/WingLogger",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.2",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`queue with custom timeout 1`] = `
"{
  \\"resource\\": {
    \\"aws_sqs_queue\\": {
      \\"root_Queue_7193B145\\": {
        \\"name\\": \\"Queue-c822c726\\",
        \\"visibility_timeout_seconds\\": 30
      }
    }
  }
}"
`;

exports[`queue with custom timeout 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Queue": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": true,
                },
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.sqsQueue.SqsQueue",
                      "version": "12.0.2",
                    },
                    "id": "Default",
                    "path": "root/Default/Queue/Default",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A distributed message queue",
                  "title": "Queue",
                },
                "id": "Queue",
                "path": "root/Default/Queue",
              },
              "WingLogger": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/Default/WingLogger",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.2",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`replace invalid character from queue name 1`] = `
"{
  \\"resource\\": {
    \\"aws_sqs_queue\\": {
      \\"root_TheIncredibleQueue_453F8E34\\": {
        \\"name\\": \\"The-Incredible-Queue-c8305287\\"
      }
    }
  }
}"
`;

exports[`replace invalid character from queue name 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "The*Incredible$Queue": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": true,
                },
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.sqsQueue.SqsQueue",
                      "version": "12.0.2",
                    },
                    "id": "Default",
                    "path": "root/Default/The*Incredible$Queue/Default",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A distributed message queue",
                  "title": "Queue",
                },
                "id": "The*Incredible$Queue",
                "path": "root/Default/The*Incredible$Queue",
              },
              "WingLogger": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/Default/WingLogger",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.2",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
